--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,28 +1,25 @@
-version: "3.8"
+version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: cdk-trenggalek
-    container_name: cdk-trenggalek
-    restart: unless-stopped
-    working_dir: /var/www/html
+    image: firdausnanda/laravel-app:latest
+    restart: always
+    environment:
+      - APP_ENV=production
+      - APP_DEBUG=false
     volumes:
-      - ./:/var/www/html
+      - ./storage:/var/www/html/storage
     networks:
       - laravel
 
   webserver:
     image: nginx:alpine
-    container_name: laravel-webserver
-    restart: unless-stopped
+    restart: always
     ports:
-      - "8000:80"
+      - "80:80"
     volumes:
-      - ./:/var/www/html
       - ./docker/nginx:/etc/nginx/conf.d
+      - ./public:/var/www/html/public
     networks:
       - laravel
     depends_on:
@@ -30,8 +27,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: laravel-db
-    restart: unless-stopped
+    restart: always
     environment:
       MYSQL_DATABASE: laravel
       MYSQL_ROOT_PASSWORD: secret
@@ -39,16 +35,6 @@ services:
       MYSQL_USER: laravel
     volumes:
       - dbdata:/var/lib/mysql
-    ports:
-      - "3306:3306"
-    networks:
-      - laravel
-
-  redis:
-    image: redis:alpine
-    container_name: laravel-redis
-    ports:
-      - "6379:6379"
     networks:
       - laravel
 
