--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME='Lara Dashboard'
+APP_NAME='Cabang Dinas Kehutanan Wilayah Trenggalek'
 APP_ENV=local
 APP_KEY=base64:SEjGcAu686ZZQORkIEodR2WdcPpqBBKjMxfIbEFoTrA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=db
@@ -24,12 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=live.smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=smtp@mailtrap.io
+MAIL_PASSWORD=249ed4dd9798557d5ef072074ecab5b1
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=hello@cdk-trenggalek2.co.id
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -47,4 +47,3 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # Turn this off, if your want to disable demo login filled data.
 DEMO_MODE=false
-GITHUB_LINK=https://github.com/laradashboard/laradashboard
