[FIX] password paramater

--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -75,7 +75,7 @@ jobs:
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PASSWORD }}
+        password: ${{ secrets.SSH_PASSWORD }}
         script: |
           cd /home/kda/cdk-trenggalek
           git pull origin main
