--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -57,8 +57,11 @@ jobs:
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - uses: actions/checkout@v4
-
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GH_TOKEN }}
+    
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -79,10 +82,10 @@ jobs:
         script: |
           cd /home/kda/cdk-trenggalek
           git pull origin main
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d --build
-          docker-compose exec app composer install --no-interaction --optimize-autoloader --no-dev
-          docker-compose exec app php artisan migrate --force
-          docker-compose exec app php artisan cache:clear
-          docker-compose exec app php artisan view:clear
+          sudo docker-compose down
+          sudo docker-compose pull
+          sudo docker-compose up -d --build
+          sudo docker-compose exec app composer install --no-interaction --optimize-autoloader --no-dev
+          sudo docker-compose exec app php artisan migrate --force
+          sudo docker-compose exec app php artisan cache:clear
+          sudo docker-compose exec app php artisan view:clear
