--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,9 @@ version: '3.8'
 
 services:
   app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: firdausnanda/laravel-app:latest
     restart: always
     environment:
