[FIX] username git

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # Turn this off, if your want to disable demo login filled data.
 DEMO_MODE=false
+GITHUB_TOKEN=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
