--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -27,6 +27,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -58,6 +60,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -67,8 +74,12 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/laravel-app:latest .
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/laravel-app:latest
+        docker build \
+          --secret id=GITHUB_TOKEN,env=GITHUB_TOKEN \
+          -t ${{ env.IMAGE_NAME }}:latest \
+          -t ${{ env.IMAGE_NAME }}:${{ github.sha }} .
+        docker push ${{ env.IMAGE_NAME }}:latest
+        docker push ${{ env.IMAGE_NAME }}:${{ github.sha }}
 
     - name: SSH and deploy
       uses: appleboy/ssh-action@v1
