--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -71,6 +71,22 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      
+    - name: Validate patches
+      run: |
+        if [ -f composer-patches.json ]; then
+          sudo apt-get install -y patch jq
+          for patch in $(jq -r '.patches[][],.extra.patches[][]' composer-patches.json 2>/dev/null); do
+            if [ ! -f "$patch" ]; then
+              echo "::error::Patch file not found: $patch"
+              exit 1
+            fi
+            if ! patch --dry-run -p1 < "$patch" >/dev/null 2>&1; then
+              echo "::error::Invalid patch file: $patch"
+              exit 1
+            fi
+          done
+        fi
 
     - name: Build and push Docker image
       env:
