--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -72,20 +72,31 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
       
-    - name: Validate patches
+    - name: Validate and apply patches
       run: |
+        sudo apt-get install -y patch jq
         if [ -f composer-patches.json ]; then
-          sudo apt-get install -y patch jq
-          for patch in $(jq -r '.patches[][],.extra.patches[][]' composer-patches.json 2>/dev/null); do
-            if [ ! -f "$patch" ]; then
-              echo "::error::Patch file not found: $patch"
-              exit 1
-            fi
-            if ! patch --dry-run -p1 < "$patch" >/dev/null 2>&1; then
-              echo "::error::Invalid patch file: $patch"
-              exit 1
+          # Create temporary vendor directory for dry-run
+          mkdir -p vendor/opis/closure/src
+          touch vendor/opis/closure/src/SerializableClosure.php
+          
+          for patch in $(jq -r '.patches[][]' composer-patches.json); do
+            echo "Testing patch: $patch"
+            
+            # Try different patch strip levels
+            if ! patch --dry-run -p1 < "$patch"; then
+              echo "::warning::Trying with -p0..."
+              if ! patch --dry-run -p0 < "$patch"; then
+                echo "::error::Patch application failed for: $patch"
+                echo "::warning::Patch content:"
+                cat "$patch"
+                exit 1
+              fi
             fi
           done
+          
+          # Clean up
+          rm -rf vendor
         fi
 
     - name: Build and push Docker image
