--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -87,6 +87,8 @@ jobs:
         docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cdk-trenggalek:latest
         docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cdk-trenggalek:${{ github.sha }}
 
+        docker save -o cdk-trenggalek.tar ${{ secrets.DOCKER_HUB_USERNAME }}/cdk-trenggalek:latest
+
     - name: SSH and deploy
       uses: appleboy/ssh-action@v1
       with:
@@ -96,10 +98,17 @@ jobs:
         script: |
             mkdir -p ~/.ssh
             ssh-keyscan github.com >> ~/.ssh/known_hosts
+            git config --global --add safe.directory /home/kda/cdk-trenggalek
             
             cd /home/kda/cdk-trenggalek
+            git config --global url."git@github.com:".insteadOf "https://github.com/"
+            git pull origin main
+            
             docker-compose down --remove-orphans
-            docker-compose pull || docker-compose build
+            if ! docker-compose pull; then
+              echo "Image pull failed, loading from backup..."
+              docker load -i cdk-trenggalek.tar
+            fi
             docker-compose up -d
             
             docker-compose exec -T app composer install --no-interaction --optimize-autoloader --no-dev
