--- a/.github/workflows/laravel-ci-cd.yml
+++ b/.github/workflows/laravel-ci-cd.yml
@@ -101,7 +101,7 @@ jobs:
             git config --global --add safe.directory /home/kda/cdk-trenggalek
             
             cd /home/kda/cdk-trenggalek
-            git config --global url."git@github.com:".insteadOf "https://github.com/"
+            git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
             git pull origin main
             
             docker-compose down --remove-orphans
