--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,12 +24,19 @@ jobs:
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
+    - name: Setup MySQL
       run: |
-        mkdir -p database
-        touch database/database.sqlite
+        sudo systemctl start mysql
+        mysql -e 'CREATE DATABASE IF NOT EXISTS testing_database;'
+        mysql -e 'CREATE USER IF NOT EXISTS "tester"@"localhost" IDENTIFIED BY "password";'
+        mysql -e 'GRANT ALL PRIVILEGES ON testing_database.* TO "tester"@"localhost";'
+        mysql -e 'FLUSH PRIVILEGES;'
+
     - name: Execute tests (Unit and Feature tests) via Pest
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_CONNECTION: mysql
+        DB_DATABASE: db_cdk_trenggalek
+        DB_USERNAME: root
+        DB_PASSWORD: password
+        DB_HOST: 127.0.0.1
       run: ./vendor/bin/pest
