--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,12 +26,12 @@ jobs:
       run: chmod -R 777 storage bootstrap/cache
     - name: Setup MySQL
       run: |
-        sudo systemctl start mysql
-        mysql -e 'CREATE DATABASE IF NOT EXISTS testing_database;'
-        mysql -e 'CREATE USER IF NOT EXISTS "tester"@"localhost" IDENTIFIED BY "password";'
-        mysql -e 'GRANT ALL PRIVILEGES ON testing_database.* TO "tester"@"localhost";'
-        mysql -e 'FLUSH PRIVILEGES;'
-
+            sudo systemctl start mysql
+            sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'password';"
+            sudo mysql -e "CREATE DATABASE IF NOT EXISTS testing_database;"
+            sudo mysql -e "CREATE USER IF NOT EXISTS 'tester'@'localhost' IDENTIFIED BY 'password';"
+            sudo mysql -e "GRANT ALL PRIVILEGES ON testing_database.* TO 'tester'@'localhost';"
+            sudo mysql -e "FLUSH PRIVILEGES;"
     - name: Execute tests (Unit and Feature tests) via Pest
       env:
         DB_CONNECTION: mysql
