--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel Tests
 
 on:
   push:
@@ -8,35 +8,51 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: testing_database
+          MYSQL_USER: tester
+          MYSQL_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Setup MySQL
-      run: |
-            sudo systemctl start mysql
-            sudo mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'password';"
-            sudo mysql -e "CREATE DATABASE IF NOT EXISTS testing_database;"
-            sudo mysql -e "CREATE USER IF NOT EXISTS 'tester'@'localhost' IDENTIFIED BY 'password';"
-            sudo mysql -e "GRANT ALL PRIVILEGES ON testing_database.* TO 'tester'@'localhost';"
-            sudo mysql -e "FLUSH PRIVILEGES;"
-    - name: Execute tests (Unit and Feature tests) via Pest
-      env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: db_cdk_trenggalek
-        DB_USERNAME: root
-        DB_PASSWORD: password
-        DB_HOST: 127.0.0.1
-      run: ./vendor/bin/pest
+      - uses: actions/checkout@v3
+  
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          extensions: mbstring, dom, fileinfo, mysql, curl
+          tools: composer:v2
+      
+      - name: Copy .env
+        run: |
+          cp .env.example .env
+          echo "DB_CONNECTION=mysql" >> .env
+          echo "DB_HOST=127.0.0.1" >> .env
+          echo "DB_PORT=3306" >> .env
+          echo "DB_DATABASE=testing_database" >> .env
+          echo "DB_USERNAME=tester" >> .env
+          echo "DB_PASSWORD=password" >> .env
+      
+      - name: Install Dependencies
+        run: |
+          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      
+      - name: Generate key
+        run: php artisan key:generate
+      
+      - name: Set directory permissions
+        run: chmod -R 777 storage bootstrap/cache
+      
+      - name: Run migrations and seed
+        run: php artisan migrate:fresh --seed
+      
+      - name: Execute tests
+        run: ./vendor/bin/pest
