--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ "*" ]
 
+env:
+  DOCKER_IMAGE: firdausnanda46/cdk-trenggalek
+  DOCKER_TAG: latest
+  APP_PORT: 8000
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
@@ -53,3 +58,47 @@ jobs:
       
       - name: Run migrations and seed
         run: php artisan migrate:fresh --seed
+
+  build-and-deploy:
+    needs: laravel-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
+            ${{ env.DOCKER_IMAGE }}:$(date +%Y%m%d%H%M%S)
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1.0.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            docker compose -f docker-compose.prod.yml down || true
+            
+            docker pull ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
+            
+            mkdir -p /var/www/storage
+            mkdir -p /var/www/storage/framework/{cache,sessions,views}
+            
+            docker compose -f docker-compose.prod.yml up -d --remove-orphans
