--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "flowbite": "^3.1.2",
         "fullcalendar": "^6.1.15",
         "jsvectormap": "^1.6.0",
+        "quill-emoji": "^0.2.0",
         "react-dom": "^19.1.0",
         "simple-datatables": "^10.0.0",
         "tailwind-merge": "^3.0.1",
